backend: get all posts http workflow + pagination
